fix: updates allauth templates for better display of html account templates.

--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,6 +1,8 @@
 {% extends "account/base.html" %}
 <!-- prettier-ignore -->
 {% load i18n %}
+<!-- prettier-ignore -->
+{% block extra_title %} | E-mail Addresses{% endblock %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 <!-- prettier-ignore -->
