--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,12 +1,12 @@
-{% extends "account/base.html" %} {% block extra_title %} | Change Password{%
-endblock %} {% load i18n %}
+{% extends "account/base.html" %} prettier-ignore {% block extra_title %} |
+Change Password{% endblock %} {% load i18n %}
 <!-- prettier-ignore -->
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
 <div class="col-lg-6">
   <hr />
-  <h2 class="logo-font">
+  <h2 class="mb-4">
     {% if token_fail %}{% trans "Bad Token" %}{% else %}
     <!-- prettier-ignore -->
     {% trans "Change Password" %}{% endif %}
@@ -25,7 +25,7 @@ endblock %} {% load i18n %}
     <input
       type="submit"
       name="action"
-      class="btn-style logo-font btn px-5 py-1"
+      class="btn-style btn rounded-1 px-5 py-1"
       value="{% trans 'Change password' %}"
     />
   </form>
