--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -9,7 +9,9 @@
 {% block inner_content %}
 <!-- PASSWORD SET SECTION -->
 <div class="col-lg-6">
-  <h1>{% trans "Set Password" %}</h1>
+  <hr />
+  <h2 class="mb-4">{% trans "Set Password" %}</h2>
+  <hr />
 
   <form
     method="POST"
