--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -34,7 +34,9 @@
       href="{% url 'account_login' %}"
       >Back to Login</a
     >
-    <button class="btn rounded-1" type="submit">{% trans "Sign Up" %}</button>
+    <button class="btn btn-style rounded-1" type="submit">
+      {% trans "Sign Up" %}
+    </button>
   </form>
 </div>
 <!-- END Of SIGNUP SECTION -->
