--- a/static/css/base.css
+++ b/static/css/base.css
@@ -372,12 +372,32 @@ a.category-badge>span.badge:hover {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out,
+        box-shadow .15s ease-in-out;
 }
 
 .allauth-form-inner-content button:hover,
 .allauth-form-inner-content input[type='submit']:hover {
     color: var(--prussian-blue);
     background-color: var(--silver-grey);
+}
+
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {
+    color: #fff;
+    background-color: #222;
+    border-color: #222;
+}
+
+.allauth-form-inner-content a {
+    color: #17a2b8;
+    /* text-info */
 }
 
 /***********/
