feat: updates url link to access profile page from base template, updates profile views to access info.

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 {% endif %}
                 <li>
                   <a
-                    href=""
+                    href="{% url 'profile' %}"
                     aria-label="Go to the profile page"
                     class="dropdown-item"
                     >Profile</a
