--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -25,8 +25,8 @@
           class="{% if emailaddress.primary %}primary_email{%endif%}"
         >
           <input id="email_radio_{{forloop.counter}}" type="radio" name="email"
-          {% if emailaddress.primary or user.emailaddress_set.count == 1
-          %}checked="checked" {%endif %} value="{{emailaddress.email}}" />
+          {% if emailaddress.primary or user.emailaddress_set.count == 1 %}
+          checked="checked" {% endif %} value="{{emailaddress.email}}" />
           <!-- prettier-ignore -->
           {{ emailaddress.email }} {% if emailaddress.verified %}
           <span class="verified">{% trans "Verified" %}</span>
@@ -41,21 +41,21 @@
 
       <div class="buttonHolder">
         <button
-          class="secondaryAction rounded-1 btn-style px-2 py-1"
+          class="btn secondaryAction rounded-1 btn-style px-2 py-1"
           type="submit"
           name="action_primary"
         >
           {% trans 'Make Primary' %}
         </button>
         <button
-          class="secondaryAction rounded-1 btn-style px-2 py-1"
+          class="btn secondaryAction rounded-1 btn-style px-2 py-1"
           type="submit"
           name="action_send"
         >
           {% trans 'Re-send Verification' %}
         </button>
         <button
-          class="primaryAction rounded-1 btn-style px-2 py-1"
+          class="btn primaryAction rounded-1 btn-style px-2 py-1"
           type="submit"
           name="action_remove"
         >
@@ -80,7 +80,7 @@
     <button
       name="action_add"
       type="submit"
-      class="btn btn-style px-5 py-1 mb-3"
+      class="btn btn-style px-5 py-1 mb-3 rounded-1"
     >
       {% trans "Add E-mail" %}
     </button>
