fix: Adds styling to accounts and profiles pages.

--- a/profiles/templates/profiles/order_history.html
+++ b/profiles/templates/profiles/order_history.html
@@ -81,7 +81,7 @@
     <div class="col text-center mt-5 mb-3 order-history-links">
       <a
         href="{% url 'account_overview' %}"
-        class="btn btn-style rounded-1 me-2"
+        class="btn btn-style uppercase rounded-1 me-2"
         >Back to My Account</a
       >
 
@@ -90,7 +90,9 @@
         class="btn btn-style rounded-1 uppercase me-2"
         >Shop Again</a
       >
-      <a href="{% url 'home' %}" class="btn btn-style rounded-1 uppercase me-2"
+      <a
+        href="{% url 'home' %}"
+        class="btn btn-outline-secondary rounded-1 uppercase me-2"
         >Home</a
       >
     </div>
