--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col">
       <hr />
-      <h2 class="logo-font mb-4">Thank You</h2>
+      <h2 class="mb-4">Thank You</h2>
       {% if user.username %}
       <h5 class="text-uppercase text-muted">
         <i class="fas fa-user fa-lg"></i> {{ user }}
@@ -188,9 +188,9 @@
       {% if from_profile %}
       <!-- Button to access profile -->
       <a
-        href=""
+        href="{% url 'profile' %}"
         aria-label="Go to the profile page"
-        class="btn btn-black rounded-1 my-2"
+        class="btn btn-style rounded-1 my-2"
       >
         <span class="icon me-2">
           <i class="fas fa-angle-left"></i>
