--- a/profiles/templates/profiles/account_overview.html
+++ b/profiles/templates/profiles/account_overview.html
@@ -26,8 +26,8 @@
   <div class="row mt-4">
     <div class="col text-center">
       <a href="{% url 'profile' %}">
-        <div class="btn btn-style accounts-btns">
-          <span><i class="fa-solid fa-user pr-2"></i></span>
+        <div class="btn btn-style accounts-btns rounded-1">
+          <span><i class="fas fa-user pe-2"></i></span>
           Personal Details
         </div>
       </a>
@@ -37,7 +37,7 @@
   <div class="row mt-5">
     <div class="col text-center">
       <a href="{% url 'order_history' %}">
-        <div class="btn btn-style accounts-btns">
+        <div class="btn btn-style accounts-btns rounded-1">
           <span><i class="fas fa-regular fa-gift"></i></span>
           Previous Orders
         </div>
@@ -48,7 +48,7 @@
   <div class="row mt-5">
     <div class="col text-center">
       <a href="">
-        <div class="btn btn-style accounts-btns">
+        <div class="btn btn-style accounts-btns rounded-1">
           <span><i class="fas fa-heart pr-2" style="color: brown"></i></span>
           Wishlist
         </div>
