feat: updates href in products templates to allow superusers creation and management of products.

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -90,7 +90,7 @@
           <tbody class="border-top">
             <tr>
               <!-- Product Image -->
-              <td class="p-3">
+              <td class="p-3 w-25">
                 <a href="{% url 'product_details' item.product.id %}">
                   {% include 'bag/includes/product_image.html'%}
                 </a>
