--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -46,7 +46,7 @@
             >Cancel</a
           >
           <button
-            class="btn btn-outline-secondary rounded-1"
+            class="btn btn-style rounded-1"
             type="submit"
             aria-label="Update Product"
           >
