--- a/static/css/base.css
+++ b/static/css/base.css
@@ -290,6 +290,35 @@ footer h6,
     width: auto;
 }
 
+
+/***********/
+/* PRODUCT FORM */
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before {
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
+.custom-checkbox .custom-control-input:checked~.customer-control-label::before {
+    background-color: #dc3545;
+    border-radius: 0;
+    border-color: #dc3545;
+}
+
 /***********/
 /* PRODUCTS DETAILS PAGE */
 .product-details-img {
