--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -59,10 +59,12 @@
 </div>
 <!-- END OF EDIT PRODUCTS SECTION-->
 {% endblock %} {% block postloadjs %} {{ block.super }}
+<!-- JS to display miniature of image product has -->
 <script>
-  // Add new image
+  // Listen to change event on new image input
   $("#new-image").change(function () {
-    var file = $("#new-image")[0].files[0];
+    const file = $("#new-image")[0].files[0];
+    // Set file name paragraph in widget template to files name
     $("#filename").text(`Image will be set to: ${file.name}`);
   });
 </script>
