--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block page_header %}
+{% extends "base.html" %} {% load static %}{% block page_header %}
 <!-- BLOCK PAGE HEADER -->
 <div class="container header-container">
   <div class="row">
@@ -9,11 +9,11 @@
 {% endblock %} {% block content %}
 <!-- ADD PRODUCTS SECTION -->
 <div class="overlay"></div>
-<div class="container">
+<div class="container-fluid header-container px-5">
   <div class="row">
     <div class="col-12 col-md-6">
       <hr />
-      <h2 class="sub-title mb-4">Product Management</h2>
+      <h2 class="mb-4">Product Management</h2>
       <h5 class="text-muted">Add a Product as:</h5>
       <h5 class="text-uppercase text-muted">
         <i class="fas fa-user fa-lg pacific-blue"></i> {{ user }}
@@ -52,7 +52,7 @@
     </div>
   </div>
 </div>
-<!-- END OF ADD PRODUCTS SECTION -->
+<!-- END ADD PRODUCTS SECTION -->
 {% endblock %} {% block postloadjs %} {{ block.super }}
 <!-- JS to display miniature of image product has -->
 <script>
