--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -9,7 +9,7 @@
 {% endblock %} {% block content %}
 <!-- EDIT PRODUCTS SECTION-->
 <div class="overlay"></div>
-<div class="container">
+<div class="container-fluid header-container px-5">
   <div class="row">
     <div class="col-12 col-md-6">
       <hr />
