--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -74,7 +74,7 @@
           next day delivery!
         </p>
         {% else %}
-        <p class="mb-0 p-2 text-bg-success shadow-sm text-black text-center">
+        <p class="mb-0 p-2 text-bg-success shadow-sm text-white text-center">
           <strong>You got free delivery!</strong>
         </p>
         {% endif %}
