fix: Align elements on the checkout & checkout success pages

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -91,7 +91,7 @@
             <div class="card-footer bg-white pt-0 border-0 text-left">
               <div class="row">
                 <div class="col">
-                  <p class="mb-0 text-left font-weight-bold">
+                  <p class="mb-0 text-left fw-bold">
                     €{{ product.price }}
                   </p>
                   {% if product.category %}
@@ -112,7 +112,7 @@
                       aria-label="Go to the gender category page"
                       class="text-muted"
                     >
-                      <i class="fas fa-tag mr-1 prussian-blue"></i>
+                      <i class="fas fa-tag me-1 prussian-blue"></i>
                       <!-- prettier-ignore -->
                       {{ product.gender_category }}
                     </a>
