--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -68,7 +68,7 @@
 </div>
 <div class="list-inline-item">
   <a
-    class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+    class="{% if grand_total %}text-primary fw-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
     href="{% url 'view_bag' %}"
   >
     <div class="text-center">
