--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -172,14 +172,14 @@
             <span class="icon">
               <i class="fas fa-chevron-left pacific-blue"></i>
             </span>
-            <span class="font-weight-bold">Adjust Bag</span>
+            <span class="fw-bold">Adjust Bag</span>
           </a>
           <button
             id="submit-button"
             class="btn btn-style rounded-1 mt-3 mb-3"
             aria-label="Complete Order"
           >
-            <span class="font-weight-bold">Complete Order</span>
+            <span class="fw-bold">Complete Order</span>
             <span class="icon">
               <i class="fas fa-credit-card pacific-blue ml-2"></i>
             </span>
