--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -12,7 +12,7 @@
 {% endblock %} {% block content %}
 <!-- CHECKOUT SUCESS SECTION -->
 <div class="overlay"></div>
-<div class="container">
+<div class="container header-container">
   <div class="row">
     <div class="col">
       <hr />
@@ -34,7 +34,7 @@
   </div>
   <div class="row">
     <!-- Order summary column -->
-    <div class="col-12 col-lg-7">
+    <div class="col-12 col-lg-8">
       <div class="order-confirmation-wrapper p-2 border">
         <div class="row">
           <div class="col">
@@ -43,17 +43,17 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 font-weight-bold">Order Number</p>
+            <p class="mb-0 fw-bold">Order Number</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.order_number }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Order Date</p>
+            <p class="mb-0 text-black fw-bold">Order Date</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.date }}</p>
           </div>
         </div>
@@ -65,12 +65,12 @@
         {% for item in order.lineitems.all %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="small mb-0 text-black font-weight-bold">
+            <p class="small mb-0 text-black fw-bold">
               <!-- prettier-ignore -->
               {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
             </p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="small mb-0">
               {{ item.quantity }} - €{{ item.product.price }} each
             </p>
@@ -84,70 +84,70 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Full Name</p>
+            <p class="mb-0 text-black fw-bold">Full Name</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.full_name }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Address 1</p>
+            <p class="mb-0 text-black fw-bold">Address 1</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.street_address1 }}</p>
           </div>
         </div>
         {% if order.street_address2 %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Address 2</p>
+            <p class="mb-0 text-black fw-bold">Address 2</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.street_address2 }}</p>
           </div>
         </div>
         {% endif %} {% if order.county %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">County</p>
+            <p class="mb-0 text-black fw-bold">County</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.county }}</p>
           </div>
         </div>
         {% endif %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Town or City</p>
+            <p class="mb-0 text-black fw-bold">Town or City</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.town_or_city }}</p>
           </div>
         </div>
         {% if order.postcode %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Postal Code</p>
+            <p class="mb-0 text-black fw-bold">Postal Code</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.postcode }}</p>
           </div>
         </div>
         {% endif %}
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Country</p>
+            <p class="mb-0 text-black fw-bold">Country</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.country }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Phone Number</p>
+            <p class="mb-0 text-black fw-bold">Phone Number</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">{{ order.phone_number }}</p>
           </div>
         </div>
@@ -158,25 +158,25 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Order Total</p>
+            <p class="mb-0 text-black fw-bold">Order Total</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">€{{ order.order_total }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">Delivery</p>
+            <p class="mb-0 text-black fw-bold">Delivery</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">€{{ order.delivery_cost }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4">
-            <p class="mb-0 text-black font-weight-bold">€ Grand Total</p>
+            <p class="mb-0 text-black fw-bold">€ Grand Total</p>
           </div>
-          <div class="col-12 col-md-8 text-md-right">
+          <div class="col-12 col-md-8 text-md-end">
             <p class="mb-0">€{{ order.grand_total }}</p>
           </div>
         </div>
@@ -184,7 +184,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-lg-7 text-right">
+    <div class="col-12 col-lg-8 text-right">
       {% if from_profile %}
       <!-- Button to access profile -->
       <a
