--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
               <a
                 href="{% url 'view_bag' %}"
                 aria-label="Go to the view bag page"
-                class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                class="{% if grand_total %}text-info fw-bold{% else %}text-black{% endif %} nav-link"
               >
                 <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
