fix: updates classes and styling for selector on product and content layout spacing.

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -13,6 +13,7 @@
 </div>
 {% endblock %}
 
+<!-- PROFILE SECTION -->
 <!-- prettier-ignore -->
 {% block content %}
 <div class="overlay"></div>
@@ -20,7 +21,7 @@
   <div class="row">
     <div class="col">
       <hr />
-      <h2 class="mb-4 mt-5">My Profile</h2>
+      <h2 class="row mb-4 mt-5">My Profile</h2>
       <hr />
     </div>
   </div>
@@ -64,6 +65,8 @@
     </div>
   </div>
 </div>
-{% endblock %} {% block postloadjs %} {{ block.super }}
-<script src="{% static 'profiles/js/countryfield.js' %}"></script>
+{% endblock %}
+<!-- END PROFILE SECTION -->
+{% block postloadjs %} {{ block.super }}
+<script src="{% static '/profiles/js/countryfields.js' %}"></script>
 {% endblock %}
