--- a/profiles/templates/profiles/account_overview.html
+++ b/profiles/templates/profiles/account_overview.html
@@ -12,7 +12,7 @@
 </div>
 {% endblock %} {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid">
+<div class="container-fluid header-container">
   <div class="row">
     <div class="col text-center">
       <hr />
