--- a/profiles/templates/profiles/product_management.html
+++ b/profiles/templates/profiles/product_management.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block extra_title %} | Product
-Management{% endblock %} {% block extra_css %}
+{% extends 'base.html' %} {% load static %}
+<!-- extra title -->
+{% block extra_title %} | Product Management{% endblock %} {% block extra_css %}
 <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}" />
 {% endblock %} {% block page_header %}
 <div class="container header-container">
