--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -56,9 +56,9 @@
   </a>
   <div class="dropdown-menu border-0" aria-labelledby="user-options">
     {% if request.user.is_authenticated %} {% if request.user.is_superuser %}
-    <a href="" class="dropdown-item">Admin</a>
+    <a href="{% url 'admin_profile' %}" class="dropdown-item">Admin</a>
     {% endif %}
-    <a href="" class="dropdown-item">My Account</a>
+    <a href="{% url 'account_overview' %}" class="dropdown-item">My Account</a>
     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
     {% else %}
     <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
