style: Category management list of categories displaying with button for actions.

--- a/products/templates/products/add_category.html
+++ b/products/templates/products/add_category.html
@@ -74,7 +74,7 @@ Category{% endblock %} {% block page_header %}
                 <div class="btn d-inline">
                   <a
                     href="{% url 'edit_category' category.id %}"
-                    class="text-success"
+                    class="btn text-success"
                     >Edit</a
                   >
 
