feat: Creates wishlist app for user to add product to their wishlist.

--- a/products/templates/products/add_category.html
+++ b/products/templates/products/add_category.html
@@ -80,8 +80,8 @@ Category{% endblock %} {% block page_header %}
 
                   <button
                     class="btn text-danger"
-                    data-toggle="modal"
-                    data-target="#deleteModal{{category.id}}"
+                    data-bs-toggle="modal"
+                    data-bs-target="#deleteModal{{category.id}}"
                   >
                     Delete
                   </button>
