--- a/products/templates/products/includes/delete_category_modal.html
+++ b/products/templates/products/includes/delete_category_modal.html
@@ -9,7 +9,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content text-center">
       <div class="modal-header">
-        <h3 class="modal-title text-uppercase w-100">Tourbillon</h3>
+        <h3 class="modal-title text-uppercase w-100">Action Confirmation</h3>
         <button
           type="button"
           class="close"
