--- a/products/templates/products/edit_category.html
+++ b/products/templates/products/edit_category.html
@@ -69,8 +69,8 @@
 
                   <button
                     class="btn text-danger"
-                    data-toggle="modal"
-                    data-target="#deleteModal{{category.id}}"
+                    data-bs-toggle="modal"
+                    data-bs-target="#deleteModal{{category.id}}"
                   >
                     Delete
                   </button>
