feat: allows users to add and remove items from their wishlist and view their list.

--- a/profiles/templates/profiles/account_overview.html
+++ b/profiles/templates/profiles/account_overview.html
@@ -47,7 +47,7 @@
   </div>
   <div class="row mt-5">
     <div class="col text-center">
-      <a href="">
+      <a href="{% url 'wishlist' %}">
         <div class="btn btn-style accounts-btns rounded-1">
           <span><i class="fas fa-heart pr-2" style="color: brown"></i></span>
           Wishlist
