--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -34,7 +34,7 @@
             <tr class="border-top">
               <td>
                 <p class="m-0">{{product.name}}</p>
-                <div class="small wishlist-img">
+                <div class="img-fluid wishlist-img">
                   {% if product.image %}
                   <a href="{{ product.image.url }}" target="_blank">
                     <img
