--- a/templates/base.html
+++ b/templates/base.html
@@ -1,165 +1,165 @@
-  <!-- HEAD HTML -->
-  {% include "includes/head.html" %}
-  <!-- END OF HEAD HTML -->
+<!-- HEAD HTML -->
+{% include "includes/head.html" %}
+<!-- END OF HEAD HTML -->
 
-  <body>
-    <!-- Header -->
-    <header class="container-fluid fixed-top p-0">
-      <div class="row pt-lg-2 d-none d-lg-flex">
-        <div
-          class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
-        >
-          <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="my-0 logo">Tourbillon</h2>
-          </a>
-        </div>
-        <!-- Search form  -->
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <form action="{% url 'products' %}" method="get">
-            <div class="input-group w-100">
-              <input
-                class="form-control border border-black rounded-0"
-                type="text"
-                name="q"
-                placeholder="Search..."
-              />
-              <div class="input-group-append">
-                <button
-                  type="submit"
-                  class="form-control btn btn-black border border-black rounded-0"
-                >
-                  <span class="icon"><i class="fas fa-search"></i></span>
-                </button>
-              </div>
+<body>
+  <!-- Header -->
+  <header class="container-fluid fixed-top p-0">
+    <div class="row pt-lg-2 d-none d-lg-flex">
+      <div
+        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+      >
+        <a href="{% url 'home' %}" class="nav-link main-logo-link">
+          <h2 class="my-0 logo">Tourbillon</h2>
+        </a>
+      </div>
+      <!-- Search form  -->
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <form action="{% url 'products' %}" method="get">
+          <div class="input-group w-100">
+            <input
+              class="form-control border border-black rounded-0"
+              type="text"
+              name="q"
+              placeholder="Search..."
+            />
+            <div class="input-group-append">
+              <button
+                type="submit"
+                class="form-control btn btn-black border border-black rounded-0"
+              >
+                <span class="icon"><i class="fas fa-search"></i></span>
+              </button>
             </div>
-          </form>
-        </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <!-- Account link -->
-            <li class="list-inline-item dropdown">
-              <a
-                class="text-black nav-link"
-                href="#"
-                id="user-options"
-                data-bs-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-                role="button"
-              >
-                <div class="text-center">
-                  <div><i class="fas fa-user fa-lg"></i></div>
-                  <p class="my-0">My Account</p>
-                </div>
-              </a>
-              <ul class="dropdown-menu border-0" aria-labelledby="user-options">
-                <!-- prettier-ignore -->
-                {% if request.user.is_authenticated %} 
-                {% if request.user.is_superuser %}
-                <li>
-                  <a
-                    href="{% url 'add_product' %}"
-                    aria-label="Go to the product management page"
-                    class="dropdown-item"
-                    >Product Management</a
-                  >
-                </li>
-                {% endif %}
-                <li>
-                  <a
-                    href="{% url 'profile' %}"
-                    aria-label="Go to the profile page"
-                    class="dropdown-item"
-                    >Profile</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="{% url 'account_logout' %}"
-                    aria-label="Go to the accout logout page"
-                    class="dropdown-item"
-                    >Logout</a
-                  >
-                </li>
-                {% else %}
-                <li>
-                  <a
-                    href="{% url 'account_signup' %}"
-                    aria-label="Go to the signup page"
-                    class="dropdown-item"
-                    >Register</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="{% url 'account_login' %}"
-                    aria-label="Go to the login page"
-                    class="dropdown-item"
-                    >Login</a
-                  >
-                </li>
-                {% endif %}
-              </ul>
-            </li>
-            <!-- Bag link -->
-            <li class="list-inline-item">
-              <a
-                href="{% url 'view_bag' %}"
-                aria-label="Go to the view bag page"
-                class="{% if grand_total %}text-info fw-bold{% else %}text-black{% endif %} nav-link"
-              >
-                <div class="text-center">
-                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                  <p class="my-0">
-                <!-- prettier-ignore -->
-                {% if grand_total %} €{{ grand_total|floatformat:2 }} 
-                {% else %} €0.00 {% endif %}
-                  </p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row">
-        <nav class="navbar navbar-expand-lg w-100">
-          <div class="container-fluid">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#main-nav"
-              aria-controls="main-nav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- MOBILE NAVBAR -->
-            {% include 'includes/mobile-nav.html' %}
-            <!-- END OF MOBILE NAVBAR -->
-            <!-- MAIN NAVBAR -->
-            {% include 'includes/main-nav.html' %}
-            <!-- END OF MAIN NAVBAR -->
           </div>
-        </nav>
+        </form>
       </div>
-
-      <div class="row text-center marquee">
-        <h5 class="my-2 text-uppercase">
-          <i class="fad fa-box-full"></i>
-          <!-- prettier-ignore -->
-          <span class="text-success">Free</span> delivery on orders over €
-          {{ free_delivery_threshold }}!
-        </h5>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+          <!-- Account link -->
+          <li class="list-inline-item dropdown">
+            <a
+              class="text-black nav-link"
+              href="#"
+              id="user-options"
+              data-bs-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              role="button"
+            >
+              <div class="text-center">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0">My Account</p>
+              </div>
+            </a>
+            <ul class="dropdown-menu border-0" aria-labelledby="user-options">
+              <!-- prettier-ignore -->
+              {% if request.user.is_authenticated %} 
+                {% if request.user.is_superuser %}
+              <li>
+                <a
+                  href="{% url 'product_management' %}"
+                  aria-label="Go to the product management page"
+                  class="dropdown-item"
+                  >Product Management</a
+                >
+              </li>
+              {% endif %}
+              <li>
+                <a
+                  href="{% url 'profile' %}"
+                  aria-label="Go to the profile page"
+                  class="dropdown-item"
+                  >Profile</a
+                >
+              </li>
+              <li>
+                <a
+                  href="{% url 'account_logout' %}"
+                  aria-label="Go to the accout logout page"
+                  class="dropdown-item"
+                  >Logout</a
+                >
+              </li>
+              {% else %}
+              <li>
+                <a
+                  href="{% url 'account_signup' %}"
+                  aria-label="Go to the signup page"
+                  class="dropdown-item"
+                  >Register</a
+                >
+              </li>
+              <li>
+                <a
+                  href="{% url 'account_login' %}"
+                  aria-label="Go to the login page"
+                  class="dropdown-item"
+                  >Login</a
+                >
+              </li>
+              {% endif %}
+            </ul>
+          </li>
+          <!-- Bag link -->
+          <li class="list-inline-item">
+            <a
+              href="{% url 'view_bag' %}"
+              aria-label="Go to the view bag page"
+              class="{% if grand_total %}text-info fw-bold{% else %}text-black{% endif %} nav-link"
+            >
+              <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0">
+                  <!-- prettier-ignore -->
+                  {% if grand_total %} €{{ grand_total|floatformat:2 }} 
+                {% else %} €0.00 {% endif %}
+                </p>
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
-    </header>
+    </div>
+    <div class="row">
+      <nav class="navbar navbar-expand-lg w-100">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#main-nav"
+            aria-controls="main-nav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- MOBILE NAVBAR -->
+          {% include 'includes/mobile-nav.html' %}
+          <!-- END OF MOBILE NAVBAR -->
+          <!-- MAIN NAVBAR -->
+          {% include 'includes/main-nav.html' %}
+          <!-- END OF MAIN NAVBAR -->
+        </div>
+      </nav>
+    </div>
 
-    <!-- TOAST MESSAGES -->
-    {% if messages %}
-    <div class="message-container">
-      <!-- prettier-ignore -->
-      {% for message in messages %}
+    <div class="row text-center marquee">
+      <h5 class="my-2 text-uppercase">
+        <i class="fad fa-box-full"></i>
+        <!-- prettier-ignore -->
+        <span class="text-success">Free</span> delivery on orders over € {{
+        free_delivery_threshold }}!
+      </h5>
+    </div>
+  </header>
+
+  <!-- TOAST MESSAGES -->
+  {% if messages %}
+  <div class="message-container">
+    <!-- prettier-ignore -->
+    {% for message in messages %}
         {% with message.level as level %}
             {% if level == 40 %}
                 {% include 'includes/toasts/toast_error.html' %}
@@ -172,19 +172,172 @@
             {% endif %}
         {% endwith %}
       {% endfor %}
+  </div>
+  {% endif %}
+  <!-- END TOAST MESSAGES -->
+
+  <!-- Page Header -->
+  {% block page_header %} {% endblock %}
+
+  <!-- Content -->
+  {% block content %} {% endblock %}
+
+  <!-- FOOTER -->
+  <footer id="footer" class="w-100 mt-auto text-center pb-4">
+    <div class="container-fluid">
+      <div class="row">
+        <span class="logo prussian-blue">Tourbillon</span>
+        <hr />
+        <div class="row row-reverse">
+          <div class="col-sm-12 col-md-4">
+            <h3 class="sub-title">Follow Us</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.facebook.com/profile.php?id=100086385370740"
+                  rel="noopener"
+                  target="_blank"
+                  aria-label="Go to the facebook company page"
+                  class="fw-lighter fs-6"
+                  ><i class="fab fa-facebook-f pacific-blue"></i> Facebook</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/"
+                  rel="noopener"
+                  target="_blank"
+                  aria-label="Go to the Instagram company page"
+                  class="fw-lighter fs-6"
+                  ><i class="fab fa-instagram pacific-blue"></i> Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h3 class="sub-title">Be the first to know</h3>
+            <p class="fw-lighter fs-6">
+              Discover how to find the best watch and enjoy exclusive products
+              and offers via email
+            </p>
+            <!-- Mailchimp form -->
+            <div id="mc_embed_signup">
+              <form
+                action="https://gmail.us17.list-manage.com/subscribe/post?u=fb60582b0e4e463b6bfd0e6f8&amp;id=ddd0b7edb6&amp;f_id=002d41e0f0"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <h4 class="interactive-color">Subscribe</h4>
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL"
+                      >Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input
+                      type="email"
+                      value=""
+                      name="EMAIL"
+                      class="required email"
+                      id="mce-EMAIL"
+                      required
+                    />
+                  </div>
+                  <div id="mce-responses" class="clear foot">
+                    <div
+                      class="response"
+                      id="mce-error-response"
+                      style="display: none"
+                    ></div>
+                    <div
+                      class="response"
+                      id="mce-success-response"
+                      style="display: none"
+                    ></div>
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_fb60582b0e4e463b6bfd0e6f8_ddd0b7edb6"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+                  <div class="optionalParent">
+                    <div class="clear foot">
+                      <input
+                        type="submit"
+                        value="Subscribe"
+                        name="subscribe"
+                        id="mc-embedded-subscribe"
+                        class="button"
+                      />
+                    </div>
+                    <div class="indicates-required">
+                      <span class="asterisk">*</span> Required
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <script src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+            <script>
+              (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = "EMAIL";
+                ftypes[0] = "email";
+                fnames[1] = "FNAME";
+                ftypes[1] = "text";
+                fnames[2] = "LNAME";
+                ftypes[2] = "text";
+                fnames[3] = "ADDRESS";
+                ftypes[3] = "address";
+                fnames[4] = "PHONE";
+                ftypes[4] = "phone";
+                fnames[5] = "BIRTHDAY";
+                ftypes[5] = "birthday";
+              })(jQuery);
+              var $mcj = jQuery.noConflict(true);
+            </script>
+            <!--End mc_embed_signup-->
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <h3 class="sub-title">Contact Us</h3>
+            <ul class="fw-lighter fs-6">
+              <li><i class="fas fa-phone pacific-blue"></i> +12 345678987</li>
+              <li>
+                <i class="far fa-envelope interactive-color"></i>
+                info@tourbillon.com
+              </li>
+              <li>
+                <i class="fas fa-home interactive-color"></i> Main Street -
+                Somewhere
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        <p>
+          <i class="far fa-copyright pacific-blue"></i> All Rights Reserved |
+          Tourbillon | <span id="year"></span>
+        </p>
+      </div>
     </div>
-    {% endif %}
-    <!-- END TOAST MESSAGES -->
+  </footer>
+  <!-- END OF FOOTER -->
 
-    <!-- Page Header -->
-    {% block page_header %} {% endblock %}
-
-    <!-- Content -->
-    {% block content %} {% endblock %}
-
-    <!-- Postload JavaScript -->
-    {% block postloadjs %}
-    {% include 'includes/base_script.html' %}
-    {% endblock %}
-  </body>
+  <!-- Postload JavaScript -->
+  {% block postloadjs %} {% include 'includes/base_script.html' %} 
+  {% endblock %}
+</body>
 </html>
