--- a/profiles/templates/profiles/product_management.html
+++ b/profiles/templates/profiles/product_management.html
@@ -24,8 +24,8 @@
   <div class="row mt-4">
     <div class="col text-center">
       <a href="{% url 'add_category' %}">
-        <div class="btn btn-style accounts-btns">
-          <span><i class="fa-solid fa-list pr-2"></i></span>
+        <div class="btn btn-style accounts-btns rounded-1">
+          <span><i class="fas fa-list pe-2"></i></span>
           Category Management
         </div>
       </a>
@@ -34,9 +34,9 @@
   <div class="row mt-5">
     <div class="col text-center">
       <a href="{% url 'add_product' %}">
-        <div class="btn logo-font btn-style accounts-btns">
-          <span><i class="fal fa-watch"></i></span>
-          Product Management
+        <div class="btn logo-font btn-style accounts-btns rounded-1">
+          <span><i class="fas fa-cogs pe-2"></i></span>
+          Add a Product
         </div>
       </a>
     </div>
@@ -44,8 +44,8 @@
   <div class="row mt-5">
     <div class="col text-center small mb-2">
       <a href="{% url 'admin_profile' %}">
-        <div class="btn btn-style">
-          <span><i class="fas fa-arrow-left pr-2"></i></span>
+        <div class="btn btn-style rounded-1">
+          <span><i class="fas fa-chevron-left pe-2"></i></span>
           Back to Admin Panel
         </div>
       </a>
