--- a/templates/base.html
+++ b/templates/base.html
@@ -183,7 +183,7 @@
   {% block content %} {% endblock %}
 
   <!-- FOOTER -->
-  <footer id="footer" class="w-100 mt-auto text-center pb-4">
+  <footer id="footer" class="w-100 mt-auto text-center py-4">
     <div class="container-fluid">
       <div class="row">
         <div class="row row-reverse">
