fix: position of footer. issue with newsletter link in admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
   <header class="container-fluid fixed-top p-0">
     <div class="row pt-lg-2 d-none d-lg-flex">
       <div
-        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-end"
       >
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <h2 class="my-0 logo">Tourbillon</h2>
@@ -35,7 +35,7 @@
         </form>
       </div>
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+        <ul class="list-inline list-unstyled text-center text-lg-end my-0">
           <!-- Account link -->
           <li class="list-inline-item dropdown">
             <a
@@ -183,7 +183,7 @@
   {% block content %} {% endblock %}
 
   <!-- FOOTER -->
-  <footer id="footer" class="w-100 mt-auto text-center py-4">
+  <footer id="footer" class="w-100 mt-auto text-center py-4 mb-n1">
     <div class="container-fluid">
       <div class="row">
         <div class="row row-reverse">
