--- a/profiles/templates/profiles/admin_profile.html
+++ b/profiles/templates/profiles/admin_profile.html
@@ -33,7 +33,7 @@ Profile{% endblock %} {% block extra_css %}
   </div>
   <div class="row mt-5">
     <div class="col text-center">
-      <a href="{% url 'product_management' %}">
+      <a href="{% url 'add_faq' %}">
         <div class="btn btn-style accounts-btns rounded-1">
           <span><i class="fas fa-question pe-2"></i></span>
           FAQ's
@@ -44,7 +44,7 @@ Profile{% endblock %} {% block extra_css %}
   </div>
   <div class="row mt-5">
     <div class="col text-center">
-      <a href="">
+      <a href="{% url 'newsletter' %}">
         <div class="btn btn-style accounts-btns rounded-1">
           <span><i class="fas fa-users pe-2"></i></span>
           Newsletter
